--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <title>Complementario Humanización Atención en Salud</title>
+        <title>Humanización de la Atención en Salud</title>
         <meta meta name="description" content="Equipo de Ecosistema de recursos educativos SENA encargado del desarrollo y rediseño de cursos virtuales de aprendizaje para el SENA.">
         <link rel="icon" type="image/svg+xml" href="assets/images/logos/senaLogo.svg">
         <link rel="stylesheet" href="assets/fonts/feather/feather.css">
@@ -32,7 +32,7 @@
                     <div class="curso-portada">
                         <div class="row align-items-center">
                             <div class="col-12 col-lg-6">
-                                <h3 class="curso-subtitulo" id="curso-titulo-componente">Complementario Humanización de la atención en Salud</h3>
+                                <h3 class="curso-subtitulo" id="curso-titulo-componente">Humanización de la Atención en Salud</h3>
                                 <h1 class="curso-titulo" id="curso-titulo-tema">Habilidades para la atención humanizada</h1>
                                 <div class="brand-line-primary"></div>
                                 <p class="curso-descripcion">El presente módulo pretende resaltar la importancia de las habilidades que debe fortalecer el talento humano en salud, con el fin de brindar una atención humanizada, así mismo, mejorar las relaciones interpersonales entre el paciente y su familia o red de apoyo, el personal de salud y la organización. Las habilidades son propias de cada persona, sin embargo, pueden ser potencializadas de manera individual y colectiva. Para construirlas es necesario hacer un análisis propio determinando fortalezas y debilidades individuales, con ello desarrollar mejores habilidades sociales. Por consiguiente, favorecer la solución de situaciones cotidianas que se evidencia en la atención en salud y nos llevan a generar servicios orientados en el ser humano de forma holística e integral.</p><a class="curso-btn-iniciar btn btn-light" href="main.html"><span>Iniciar Curso</span></a>
