--- a/public/pages/tema_1.html
+++ b/public/pages/tema_1.html
@@ -272,7 +272,7 @@
         <div class="row">
             <div class="col-12">
                 <p>Lograr el éxito en una organización, con equipos de trabajo comprometidos, puede ser sinónimo de una mayor productividad y logros alcanzados, sin embargo, el rendimiento y la calidad del trabajo precisa una dependencia en la satisfacción laboral de cada persona, es decir que, cuando se tiene en cuenta el talento humano se genera mejores resultados. Si comprendemos los factores de motivación resulta más fácil generar un ambiente de trabajo donde florezca la automotivación.</p>
-                <p>La motivación es un factor relevante en las personas líderes, dado que tienden a inspirar con sus acciones a los demás. Los líderes, por lo general, no hacen las cosas por sí mismos, sino que las hacen a través de la gente. Por eso, entender las motivaciones de la gente que trabaja con ellos es una competencia clave para ser un líder efectivo.s</p>
+                <p>La motivación es un factor relevante en las personas líderes, dado que tienden a inspirar con sus acciones a los demás. Los líderes, por lo general, no hacen las cosas por sí mismos, sino que las hacen a través de la gente. Por eso, entender las motivaciones de la gente que trabaja con ellos es una competencia clave para ser un líder efectivo.</p>
             </div>
         </div>
     </div>
