--- a/public/pages/actividad-1.html
+++ b/public/pages/actividad-1.html
@@ -6,7 +6,7 @@
         <div class="col-8 col-md-6 col-xl-4 mb-5 d-flex justify-content-center">
             <figure><img src="assets/images/pages/actividad/img_actividad.svg" alt="" /></figure>
         </div>
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-lg-6">
             <hr class="line-100 bg-orange" />
             <div class="text-center p-2">
                 <h2>¿Y su motivación es? </h2>
