--- a/public/pages/referencias.html
+++ b/public/pages/referencias.html
@@ -3,19 +3,19 @@
         <h1>Referencias bibliográficas</h1>
     </div>
     <div class="jumbotron bg-white referencias">
-        <p>Brusco A. 1998, Humanización de la Asistencia al Enfermo. Sal Terrae Cuadernos del Centro de Humanización de la Salud, pág. 86-90.</p>
+        <p>Brusco A. (1998). Humanización de la Asistencia al Enfermo. Sal Terrae Cuadernos del Centro de Humanización de la Salud, pág. 86-90.</p>
         <hr />
-        <p>Instituto Internacional de Planeamiento de la Educación, Ministerio de Educación de la Nación, 2000. Trabajo en Equipo, Modulo 09 Competencias para la profesionalización de la gestión educativa Diez módulos destinados a los responsables de los procesos de transformación educativa. pág. 6-9.</p>
+        <p>Goleman, D. (1995). Inteligencia Emocional. Por qué es más importante que el cociente intelectual: Barcelona, España. Ediciones B, S.A.</p>
         <hr />
-        <p>Goleman, D. (1995). Inteligencia Emocional. Por qué es más importante que el cociente intelectual: Barcelona (España). Ediciones B, S.A.</p>
+        <p>Instituto Internacional de Planeamiento de la Educación. (2000). Trabajo en Equipo, Módulo 09. Competencias para la profesionalización de la gestión educativa: diez módulos destinados a los responsables de los procesos de transformación educativa. pág. 6-9.</p>
         <hr />
-        <p>Pérez J., 2016. Humanización en la prestación de los servicios de salud. Material de formación SENA. Estrategias para humanizar los servicios de salud de acuerdo con herramientas de comunicación, manejo de conflictos y solución de problemas, SENA.</p>
+        <p>Pérez Carreño J.G. (2016). Humanización en la prestación de los servicios de salud. Material de formación SENA. Estrategias para humanizar los servicios de salud de acuerdo con herramientas de comunicación, manejo de conflictos y solución de problemas, SENA.</p>
         <hr />
-        <p>Sánchez P. J. 2016. Programa Técnicas de comunicación en el nivel administrativo. Material de formación. 1: La Comunicación. SENA.</p>
+        <p>Sánchez Pizarro J. H. (2016). Programa Técnicas de comunicación en el nivel administrativo. Material de formación. 1: La Comunicación. SENA</p>
         <hr />
-        <p>Toro, L. Y., 2015, La importancia del trabajo en equipo en las organizaciones, pág. 10-22.</p>
+        <p>Toro Suarez L. Y. (2015). La importancia del trabajo en equipo en las organizaciones. Universidad Militar Nueva Granada.</p>
         <hr />
-        <p>Material de formación SENA: Humanización en la prestación de los servicios de salud, Estrategias para humanizar los servicios de salud de acuerdo con herramientas de comunicación, manejo de conflictos y solución de problemas.</p>
+        <p>Vargas Trepaud, R. (2005). Proyecto de vida y planeamiento estratégico personal, Lima Perú. </p>
         <hr />
         <div class="row justify-content-between align-items-center">
             <div class="col-12 col-md-5 my-4">
