--- a/public/pages/tema_2.html
+++ b/public/pages/tema_2.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="header-ecored mt-3" id="tema2_1">
-                    <h2>2.1 Sentido de Vida </h2>
+                    <h2>2.1 Sentido de vida </h2>
                 </div>
             </div>
         </div>
@@ -22,7 +22,7 @@
         <div class="row">
             <div class="col-12">
                 <p>Cuando el sentido de vida se encuentra alineado directamente con el papel o labor desempeñada a diario, existe mayor posibilidad de establecer metas comunes y cumplirlas, trabajar por el bien propio y común, generando impactos positivos, con mayor recordación y ofreciendo una respuesta comprometida con la vida misma. Es importante resaltar que, en el caso de personal de atención en salud, el bienestar propio significa en consecuencia el bienestar de otros, dado la naturaleza de la labor orientada hacia el servicio. En este sentido, las orientaciones de vida hacia el respeto y dignidad humana deben ser pilares fundamentales en el proyecto de superación propio o personal, profesional y familiar.</p>
-                <p>El planteamiento personal puede <strong>encontrar su fundamento en la necesidad que tiene cada persona de encontrar un sentido a su propia existencia</strong>. No es la vida la que nos entrega ese significado, sino que precisamente cada persona tiene el enorme <strong>desafío de encontrarlo frente a su propia existencia</strong>. </p>
+                <p><strong>El planteamiento personal puede encontrar su fundamento en la necesidad que tiene cada persona de encontrar un sentido a su propia existencia. No es la vida la que nos entrega ese significado, sino que precisamente cada persona tiene el enorme desafío de encontrarlo frente a su propia existencia</strong>. </p>
             </div>
         </div>
         <div class="row justify-content-center align-items-center my-5">
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-12">
                 <p>Con las decisiones y las acciones que adoptemos y realicemos, configura un revelador sentido de vida. <strong>La vida nos interpela, nos cuestiona y nos desafía</strong> en cada instante de nuestra existencia para que le demos respuesta.</p>
-                <p>El sentido de vida que demos, orienta a entender la razón de la existencia, para qué vivimos y cuál es el propósito de la vida, este último, forma parte del proceso de crecimiento personal, para el cual, cada ser humano puede contar con las condiciones de <strong>diseñar su propio futuro</strong> y encontrar su sentido.</p>
+                <p>El sentido que le damos a nuestras acciones y planes, permite orientarnos hacia entender la razón de nuestra existencia, para qué vivimos y cuál es el propósito, este último, forma parte fundamental del proceso de crecimiento personal que cada ser humano debe explorar para <strong>diseñar su propio futuro.</strong> </p>
             </div>
         </div>
     </div>
@@ -45,7 +45,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <p>Desde la Humanización tenemos el privilegio de abordar las relaciones interpersonales, las cuales se establecen entre persona y persona o por grupos de personas, estas relaciones se generan para compartir información, comunicación, transmitir emociones, compartir decisiones o prácticas, o en este caso para ayudar y servir a otros, que es el quehacer diario de la atención humanizada en salud. </p>
+                <p>Desde la humanización tenemos el privilegio de abordar las relaciones interpersonales, las cuales se establecen entre persona y persona o por grupos de personas, estas relaciones se generan para compartir información, comunicación, transmitir emociones, compartir decisiones o prácticas, o en este caso para ayudar y servir a otros, que es el quehacer diario de la atención humanizada en salud. </p>
             </div>
         </div>
         <div class="row justify-content-center align-items-center my-5">
@@ -63,7 +63,7 @@
                         <div class="list__item__icon"><img src="assets/images/icons/icon_duoble_chevron.svg" alt="" /></div>
                     </div>
                     <div class="list__txt">
-                        <p class="mb-0"><strong>Objetividad:</strong> Es la capacidad de salirse de sí mismo y alcanzar puntos en común con la otra persona. </p>
+                        <p class="mb-0"><strong>Objetividad:</strong> es la capacidad de salirse de sí mismo y alcanzar puntos en común con la otra persona. </p>
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                         <div class="list__item__icon"><img src="assets/images/icons/icon_duoble_chevron.svg" alt="" /></div>
                     </div>
                     <div class="list__txt">
-                        <p class="mb-0"><strong>Respeto:</strong> Es el reconocimiento del otro. </p>
+                        <p class="mb-0"><strong>Respeto:</strong> es el reconocimiento del otro. </p>
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                         <div class="list__item__icon"><img src="assets/images/icons/icon_duoble_chevron.svg" alt="" /></div>
                     </div>
                     <div class="list__txt">
-                        <p class="mb-0"><strong>Tolerancia:</strong> Es la capacidad de entender pensamientos y acciones estando en desacuerdo.</p>
+                        <p class="mb-0"><strong>Tolerancia:</strong> es la capacidad de entender pensamientos y acciones estando en desacuerdo.</p>
                     </div>
                 </div>
             </div>
@@ -168,11 +168,11 @@
         <div class="row justify-content-center align-items-center my-5">
             <div class="col-12 col-lg-6">
                 <p><strong>Recurso clave</strong></p>
-                <p>Para complementar las habilidades para la atención humanizada, le recomiendo revisar la charla a continuación <strong>Humanización de los Servicios de Salud en tiempos de pandemia del Covid-19</strong>, a cargo de la dra. Carol Bernal, Fonoaudióloga, Magíster en Discapacidad e Inclusión Social, candidata a doctora Salud Pública y Secretaria General de la Asociación Colombiana de Salud Pública. Disfrútenla. </p>
-                <div class="media_link"><a href="https://www.instagram.com/tv/CCpGA2sgv-N/?igshid=17q5p6wmwr950 " target="_blank">
+                <p>Para complementar las habilidades para la atención humanizada, le recomiendo revisar la charla a continuación <strong>humanización de los Servicios de Salud en tiempos de pandemia del Covid-19</strong>, a cargo de la dra. Carol Bernal, Fonoaudióloga, Magíster en Discapacidad e Inclusión Social, candidata a doctora Salud Pública y Secretaria General de la Asociación Colombiana de Salud Pública. Disfrútenla. </p>
+                <div class="media_link"><a href="https://youtu.be/rS6HN01ZY8Y" target="_blank">
                         <div class="media_link__icon"><img src="assets/images/icons/icon_www.svg" alt="" /></div>
                         <div class="media_link__txt">
-                            <p><strong>Humanización de los Servicios de Salud en tiempos de pandemia del Covid-19.</strong> </p>
+                            <p><strong>Humanización de los servicios de salud en tiempos de pandemia del Covid-19.</strong> </p>
                         </div>
                     </a></div>
             </div>
